Small text change

--- a/PitchTool/index.html
+++ b/PitchTool/index.html
@@ -23,7 +23,7 @@
         <h1>Pitch Plotter Tool</h1>
         <div class="note">
           <p>This is a tool for viewing pitches thrown in 2019.</p>
-          <p><strong>Click on a player below</strong> to see every pitch they've thrown or faced through in 2019 (Updated July 28th).</p>
+          <p><strong><span style='color:red'>Scroll Down </span> & Click on a player below</strong> to see every pitch they've thrown or faced through in 2019 (Updated July 28th).</p>
           <p>After selecting a player, you can filter the region of pitches by dragging on the circles in the corner:</p>
           <img src="filterRegion.gif" />
           <p>And view specific pitches by hovering over the bars on the right:</p>
