Pose text change

--- a/PoseTool/index.html
+++ b/PoseTool/index.html
@@ -107,7 +107,7 @@
 
                       <circle cx="10" cy="30" fill="white" stroke="red" r="3" />
                       <text x="25" y="30" dominant-baseline="middle" font-size="12px">
-                        Expected Location (no break)
+                        Expected Location (no spin)
                       </text>
 
                     </svg>
@@ -134,7 +134,7 @@
 
                   <circle cx="10" cy="30" fill="white" stroke="red" r="3" />
                   <text x="25" y="30" dominant-baseline="middle" font-size="12px">
-                    Expected Location (no break)
+                    Expected Location (no spin)
                   </text>
 
                 </svg>
