Fixed node modules for modelViewer

--- a/modelViewer/index.html
+++ b/modelViewer/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="app/dist/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,900&display=swap" rel="stylesheet">
-    <script src="node_modules/three/build/three.min.js"></script>
+    <!-- <script src="node_modules/three/build/three.min.js"></script>
     <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
     <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
-    <script src="node_modules/d3/dist/d3.min.js"></script>
+    <script src="node_modules/d3/dist/d3.min.js"></script> -->
     <script src="app/dist/all.js"></script>
 
   </head>
