--- a/d3StrangerThings/index.html
+++ b/d3StrangerThings/index.html
@@ -5,87 +5,30 @@
     <meta property="og:title" content="Stranger Things Titles Re-Created in D3" />
     <meta property="og:image" content="https://timmarco.github.io/assets/strangerThings.gif" />
     <meta property="og:description" content="It's not really what d3 is for, but I tried synching some video and animations." />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
     <script src="bower_components/d3/d3.min.js"></script>
-    <script src="dist/bundle.js"></script>
+    <!-- <script src="dist/bundle.js"></script> -->
+    <script src="dist/all.js"></script>
+    <link rel="stylesheet" href="dist/style.css" />
 
-    <style>
-      .overlay {
-        display:none;
-        position:absolute;
-        top:0;
-        left:0;
-        height:100vh;
-        width:100vw;
-        background-color:#e9f6f5;
-        padding-left:4em;
-        padding-right:4em;
-      }
-
-      .overlay h1 {
-        font-size:7em;
-        font-family:Oswald;
-      }
-
-      .overlay p {
-        margin-top:2em;
-        font-size:3em;
-      }
-
-      #showAnyway {
-        width:80%;
-        margin:auto;
-        font-size:4em;
-        margin-top:2em;
-        border:4px solid rgb(224,115,90);
-        color:4px solid rgb(224,115,90);
-        font-family:Oswald;
-        font-weight:300;
-      }
-
-      svg {
-        font-family:Poppins;
-        font-weight:600;
-        font-size:4em;
-      }
-
-      #mainContainer {
-        width:960px;
-        margin:auto;
-      }
-
-      body {
-        font-family:Source Sans Pro;
-        background-color:#e9f6f5;
-      }
-
-      h2 {
-        font-family:Oswald;
-        margin-bottom:0;
-        padding-bottom:0;
-        font-size:2.25em;
-        margin-top:2em;
-      }
-
-      p {
-        -webkit-margin-before:0;
-        font-size:1.25em;
-      }
-    </style>
   </head>
 
   <body>
     <div id="mainContainer">
+      <h1>STRANGER THINGS TITLES RECREATED IN D3.JS</h1>
+      <a href="https://timmarco.com/" target="_new"><h2>A D3.JS EXPERIMENT BY TIM MARCO</h2></a>
+      <a href="https://www.imaginaryforces.com/.com/" target="_new"><h2>ORIGINAL TITLE DESIGN BY IMAGINARY FORCES</h2>
+
       <div id="container"></div>
 
 
-      <h2>What is this?</h2>
+      <h2>WHAT IS THIS?</h2>
       <p>This is an attempt to re-create the main titles for the Netflix show <em>Stranger Things</em> entirely in the browser. The actual sequence was created by <a href="https://www.imaginaryforces.com" target="_new">Imaginary Forces</a>, and they of course deserve all credit for designing such a cool, iconic intro.</p>
 
-      <p>The actual title sequence <a href="http://www.artofthetitle.com/title/stranger-things/" target="_new">was created </a> using sophisticated rendering software like After Effects and Cinema4D. As an experiment, I wanted to see the extent to which I could capture the look and feel of the titles using decididedly less advanced software.</p>
+      <p>The actual title sequence <a href="http://www.artofthetitle.com/title/stranger-things/" target="_new">was created </a> using sophisticated rendering software like After Effects and Cinema4D. As an experiment, I wanted to see the extent to which I could capture the look and feel of the design using decidedly less advanced software.</p>
 
       <p>In other words, I wanted to see the extent to which I could capture cinematic text effects entirely in code.</p>
 
@@ -96,7 +39,6 @@
         <iframe style="margin:auto" src="https://player.vimeo.com/video/297597711" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
-      <p>If you're interested, you can check out all of the Javascript for this in the <a href="https://www.github.com/timmarco/d3StrangerThings" target="_new">Github Repo</a>.</p>
     </div>
 
     <div class="overlay">
@@ -159,17 +101,6 @@
 
 
 
-
-    </script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-104067970-1', 'auto');
-      ga('send', 'pageview');
 
     </script>
 
