Updated style on video

--- a/blenderCharts/index.html
+++ b/blenderCharts/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
   </head>
   <body>
+    <h1>VIDEO DATA VISUALIZATION</h1>
     <div id="container">
-    <h1>Animated Charts in Blender</h1>
 
     <p>For a recent project, I needed to create high-quality animated charts for video. The charts themselves weren't that complex &ndash; I mostly needed to create column and line charts &ndash; but it was important that they were customizable, repeatable, and looked good.</p>
 
