Fixed stranger things error

--- a/challenges-of-spatial-computing/index.html
+++ b/challenges-of-spatial-computing/index.html
@@ -1,24 +1,122 @@
 <!doctype html>
 <html>
-  <body>
-    <h1>[Challenges of Spatial Computing]</h1>
-    <h3>Intro</h3>
-    <ul>
-      <li>Define Mixed Reality / Spatial Computing.</li>
-      <li>Talking specifically about HMDs here, because phones are just glowing rectangles.</li>
-      <li>[Image alluding to the whale in the gym]</li>
-      <li>Allusion to Magic Leap's ludicrous video of the whale in the gym.</li>
-      <li>That's all great, but it doesn't reflect the reality of the technology today.</li>
-      <li>Purpose of this essay is to talk about what is &mdash; and isn't &mdash; possible with what we have today.</li>
-      <li>Not meant as criticism, drop the Eames quote re: constraints</li>.
-      <li>That in mind, let's think about the limitations.</li>
-    </ul>
 
-    <h3>Field of View</h3>
-    <ul>
-      <li>[Show example image, with FoV cropped]</li>
-      <li>The most immediately obvious limitation for anyone who has put on an HMD is Field of View</li>
-      <li>This is caused by </li>
-    </ul>
+  <head>
+    <title>The Challenges of Spatial Computing | Tim Marco</title>
+    <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
+    <link rel="stylesheet" href="dist/style.css" />
+  </head>
+
+  <body>
+
+    <h1>THE CHALLENGES OF SPATIAL COMPUTING</h1>
+    <div class="bodySection">
+      <ul>
+        <li>Explanation of what I'm talking about</li>
+        <li>Reference and link to other essay on the promise</li>
+        <li>Field is rife with bullshit, overpromises, and sci-fi dreams</li>
+        <li>But if it's so amazing, why hasn't it been successful?</li>
+        <li>The reality is far from the dream for these technologies</li>
+        <li>Only fools try to predict the future</li>
+        <li>Let's try to predict the future</li>
+        <li>Challenges fall into two major categories:
+          <ul>
+            <li>Difficulties in the Devices Themselves</li>
+            <li>Difficulties Posed by the External World</li>
+          </ul>
+        </li>
+      </ul>
+
+
+    <h2>DEVICES THEMSELVES</h2>
+    <div class="bodySection">
+      <h3>Mobile</h3>
+        <ul>
+          <li>Might be appropriate sometimes, but use of hands and screen is not immersive</li>
+          <li>May not be better than just a screen / watch / etc.</li>
+        </ul>
+
+      <h3>FoV</h3>
+        <ul>
+          <li>Most common complaint when people put on Hololens for the first time</li>
+          <li>Not necessarily like a low-resolution monitor - it actually means that objects disappear as you move around</li>
+          <li>Real objects don't behave that way. And it might have downstream effects---LIMITS THE STAGE</li>
+        </ul>
+
+      <h3>THE VERGENCE-ACCOMODATION CONFLICT</h3>
+        <ul>
+          <li>Much bigger problem, but a lot more nuanced</li>
+          <li>Technically complicated, but the result is that there's a limited space around the user where you can put virtual objects</li>
+          <li>Is an INTRINSIC PROPERTY of stereoscopic displays. CANNOT be resolved incrementally, would require ENTIRELY NEW KIND of technology to resovle</li>
+          <li>Further Limits the Stage</li>
+          <li>IMPORTANTLY: Removes the possibility of hands-reach objects</li>
+          <li>Doesn't mean it's IMPOSSIBLE to place things there, just INADVISABLE and especially bad for long-term comfort</li>
+          <li>Does mean that it's IMPOSSIBLE TO DUAL FOCUS</li>
+          <li>No surgery. No maintenance. No nothing.</li>
+        </ul>
+
+
+      <h3>SIZE, WEIGHT, BATTERY</h3>
+        <ul>
+          <li>Uncomfortable</li>
+          <li>No Moore's Law</li>
+          <li>Certain fundamental physical limits</li>
+        </ul>
+
+      <h3>IMAGE QUALITY</h3>
+        <ul>
+          <li>Not always a dealbreaker, but has impacts</li>
+          <li>Why use shitty virtual monitor when a real one exists?</li>
+          <li>Additive light kinda sucks, no shadows, no blacks, not realistic</li>
+        </ul>
+
+
+    </div>
+
+    <h2>LOGISTICS / ENVIRONMENT / USE CASES</h2>
+    <div class="bodySection">
+      <h3>ENVIRONMENT</h3>
+        <ul>
+          <li>Algorithms for placing and tracking objects in space are impressive</li>
+          <li>But they're real, which means they have real constraints</li>
+          <li>Some applications require more precision than possible</li>
+          <li>Some objects look identical, so CV algorithms could never handle it</li>
+          <li>Making sense of unstructured environments is very fucking hard</li>
+          <li>Controlling objects requires controllable objects, so it's not worthwhile</li>
+        </ul>
+
+      <h3>THE GLASSHOLE EFFECT</h3>
+        <ul>
+          <li>Entirely possible that these would really be that good, in a platonic sense</li>
+          <li>But when push comes to shove people just don't want them, don't warn to them</li>
+          <li>Strikes me as less likely (given enough benefits, people will do almost anything)</li>
+          <li>Yet always possible</li>
+        </ul>
+
+      <h3>MAYBE IT JUST INS'T ALL THAT VALUABLE</h3>
+        <ul>
+          <li>In another essay, I tried to lay out the major categories of usefulness for spatial computing</li>
+          <li>But there, I didn't really consider the possibility that maybe these just aren't all that compelling</li>
+          <li>Entirely possible for the technology to work, but for it to just not be that useful</li>
+          <li>Maybe I'm overestimating how much help we need in navigating the world. Or maybe we don't need info from objects</li>
+          <li>Maybe the singularity happens first</li>
+        </ul>
+      </div>
+
+
+    <h2>CLOSING THOUGHTS</h2>
+    <div class="bodySection">
+      <ul>
+        <li>Challenges are very real, and perhaps insurmountable</li>
+        <li>Clearly limit what's possible today. Might limit what's possible forever</li>
+        <li>But there's still some reason to be excited, if not exactly optimistic</li>
+        <li>Certain things are possible, so worth exploring</li>
+        <li>Always possible for black swans</li>
+        <li>End with same message of taking things on a case-by-case basis</li>
+      </ul>
+    </div>
+
   </body>
 </html>
