--- a/d3StrangerThings/index.html
+++ b/d3StrangerThings/index.html
@@ -20,7 +20,7 @@
     <div id="mainContainer">
       <h1>STRANGER THINGS TITLES RECREATED IN D3.JS</h1>
       <a href="https://timmarco.com/" target="_new"><h2>A D3.JS EXPERIMENT BY TIM MARCO</h2></a>
-      <a href="https://www.imaginaryforces.com/.com/" target="_new"><h2>ORIGINAL TITLE DESIGN BY IMAGINARY FORCES</h2>
+      <a href="https://www.imaginaryforces.com/" target="_new"><h2>ORIGINAL TITLE DESIGN BY IMAGINARY FORCES</h2></a>
 
       <div id="container"></div>
 
