--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
 
     <div style="min-width:100vw; min-height:100vh; border-top:15px solid #4DB04A;">
-      <div style="background-color:black; padding-left:1em; padding-right:1em; font-size:5em; border-left:0.25em solid #4DB04A; font-weight:500; color:white; font-family:Oswald; display:inline-block">EXAMPLES</div>
+      <!-- <div style="background-color:black; padding-left:1em; padding-right:1em; font-size:5em; border-left:0.25em solid #4DB04A; font-weight:500; color:white; font-family:Oswald; display:inline-block">EXAMPLES</div> -->
       <div style="width:100vw;" id="exampleContainer"></div>
 
       <div id="exampleIndicator"></div>
     </div>
 
     <div style="min-width:100vw; padding-bottom:10vh; border-top:15px solid #984BA3;">
-      <div style="background-color:black; padding-left:1em; padding-right:1em; font-size:5em; border-left:0.25em solid #984BA3; font-weight:500; color:white; font-family:Oswald; display:inline-block">ABOUT</div>
+      <!-- <div style="background-color:black; padding-left:1em; padding-right:1em; font-size:5em; border-left:0.25em solid #984BA3; font-weight:500; color:white; font-family:Oswald; display:inline-block">ABOUT</div> -->
       <div style="width:100vw;">
 
         <div style="float:left; padding-left:5vw; padding-right:5vw; padding-top:5vh">
