--- a/promise-of-spatial-computing/index.html
+++ b/promise-of-spatial-computing/index.html
@@ -1,61 +1,140 @@
 <!doctype html>
 <html>
+  <head>
+    <title>The Promise of Spatial Computing | Tim Marco</title>
+    <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
+    <link rel="stylesheet" href="dist/style.css" />
+  </head>
   <body>
-    <h1>[Promise of Spatial Computing]</h1>
+    <h1>WHY SPATIAL COMPUTING COULD BE A BIG DEAL</h1>
+    <h2 style="padding-left:1.5em"><a href="https://timmarco.com/" target="_new">BY TIM MARCO</a></h2>
+      <div class="hero">[Hero Video]</div>
+      <h2 style="background-color:red">TL;DR!</h2>
+      <div class="bodySection">
+        <p>Over the past few years, I've been working in the Augmented Reality / Mixed Reality / Spatial Computing field. Although the nomenclature and technology of this field are confusing (and constantly changing), that means that fundamentally I've been working on technologies that allow users to view digital content and imagery as if it were in real, physical space.</p>
 
-    <h3>Intro</h3>
+        <p>As of this writing (early 2020), AR is probably best known as the technology behind Pokemon Go!, a mobile game that places characters in a view of the world captured by a phone camera. As the user moves around, the characters appear to exist at a real location in the physical world <span style="color:red">[SHOW IMAGE / VIDEO].</p>
 
-    <ul>
-      <li>Define what I'm talking about in terms of Spatial Computing / Mixed Reality</li>
-      <li>Onion's concept of Glowing Rectangles as metaphor for what computing is today.</li>
-      <li>Mixed Reality / Spatial Computing provides a mechanism to get beyond that.</li>
-      <li>But what that really means isn't that we'll have <em>better computers</em>. It's that we'll have <em>different computers</em>, that <em>do different things</em>.</li>
-      <li>The whole point is to help people accomplish tasks that are intrinsically spatial.</li>
-      <li>Allude to (don't explain technical challenges)</li>
-      <li>Effect change, Learn <em>from</em> objects, Learn how to <em>manipulate objects</em></li>
-    </ul>
+        <p>In recent years, companies like Microsoft and the well-funded startup Magic Leap have released Head Mounted Displays (HMDs) that attempt to create a similar experience without the mediation of a phone's display. Using transparent optical elements, HMDs can create the illusion of virtual objects directly in a user's field of view. <span style="color:red">[REWRITE AND SHOW IMAGE / VIDEO].</p>
 
-    <h3>What Not To Do</h3>
-    <ul>
-      <li>One common use case / idea is basically a floating glowing rectangle</li>
-      <li>[Mockup of glowing rectangles]</li>
-      <li>This strikes me as silly. It makes no sense. Why would you not just use a computer? Consider all of the additional cost, complexity, and overhead.</li>
-      <li>The problem here is that nothing here is intrinsically spatial, which is the whole point of MR / Spatial Computing</li>
-      <li>Charts? Virtual Characters? Etc.</li>
-    </ul>
+        <p>There's a whole lot of hype around these technologies. Microsoft made the Hololens 2 the centerpiece of its <span style="color:red">[CONFERENCE NAME]</span> conference in 2019. To date, Magic Leap has raised $3 billion in venture capital funding. </p>
 
-    <h3>Effect Changes</h3>
-    <ul>
-      <li>[Video of Lights]</li>
-      <li>Norman's <em>DOET</em> devotes a chapter to designing light switches</li>
-      <li>His point was that one of the fundamental challenges of design is establishing <em>mappings</em> between the abstract real and controls for physical devices.</li>
-      <li>That's the primary promise of spatial computing. In an ideal world, the interface just disappears.</li>
-      <li>Controlling an individual light isn't that big. But imagine controlling <em>any</em> object.</li>
-    </ul>
+        <p>And yet spatial computing has yet to make much of an impact in the real world&mdash;at least as of this writing. There have been some notable exceptions like the aforementioned Pokemon Go! or a furniture shopping app from IKEA, but so far there's been a large disconnect between expectations and reality.</p>
 
-    <h3>Learn how to manipulate objects and move in space</h3>
-    <ul>
-      <li>[Video of Keurig]</li>
-      <li>We can't always control objects directly through computers. We don't necessarily always <em>want</em> to control objects</li>
-      <li>Sometimes, we just need to know how to manipulate, change, or navigate objects in space.</li>
-      <li>Compare this to using manuals or maps. As above, the benefit is that the information is <em>there</em>: contextually and spatially relevant.</li>
-    </ul>
+        <p>Personally, I've quite ambivalent about AR. From my first-hand experience, I've seen the very signficant technical and logistical challenges involved in creating useful content and experiences. I wrote about those in a companion piece to this essay, but the short version is that today's technology just isn't capable of delivering on the kinds of experiences that could live up to the potential of AR.</p>
 
-    <h3>Learn from objects</h3>
-    <ul>
-      <li>[Big Hurt Sculpture]</li>
-      <li>Sometimes, we just want to <em>learn</em> from an object.</li>
-      <li>We want to draw attention to details or parts, or tell a story about an object, as in a museum.</li>
-      <li>But the key is <em>from an object</em>. This doesn't really work all that well when it's just a 3D display of a virtual object.</li>
-    </ul>
+        <p>And yet there are some very valid reasons for all of the hype. With sufficiently advanced technology, Augmented Reality really could be a revolution in how we interact with the world at large. If an HMD were to come along that could provide a good experience... <span style="color:red">[REWRITE NEEDED]</p>
 
-    <h3>Conclusion</h3>
-    <ul>
-      <li>Spatial computing could (in theory) represent a new paradigm for computing</li>
-      <li>But that's because it's different, not because it's better at what we aleady do.</li>
-      <li>So we need to follow these principles for design.</li>
-      <li>But there are real limitations to the technology. HMDs basically suck. Phones are literal glowing rectangles. So until those are solved, this is in part just academic.</li>
-    </ul>
+      <p>These broad categories include:</p>
+      <ul>
+        <li>Effecting Changes to the World</li>
+        <li>Extracting Information and Gaining Knowledge from the World</li>
+        <li>Augmenting Manipulation and Movement</li>
+      <ul>
+
+      </div>
+
+
+      <h2>EFFECTING CHANGES IN THE WORLD</h2>
+
+      <div class="bodySection">
+        <div class="hero">[Hero Video]</div>
+
+        <p>Don Norman's classic <em>The Design of Everyday Things</em> includes a section in which the author considers the complexities of a particularly confusing set of light switches. He finds himself in an unfamiliar office with several lights in a peculiar layout, and attempts to make sense of how to operate them.</p>
+
+        <p>While attempting to figure this out, Norman points out that the process of operating light switches can be far more complicated than it first appears. To successfully operate the room, a person needs to:</p>
+
+        <ul>
+          <li>Understand the relationship between switches and lights</li>
+          <li>Locate the light switches</li>
+          <li>Locate the lights themselves, and</li>
+          <li>Intuit how each light corresponds to each switch</li>
+        </ul>
+
+        <p>That last step can be surprisingly difficult. The circuitry that controls the lights is invisible to the poor sap in the office. And even it <em>were</em> visible, they probably aren't an electrician capable of immediately understanding between wiring, switches, and illumination.</p>
+
+        <p>So instead of thinking about how to light up the damn room, anyone who enters this office can either spend their cognitive energy trying to imagine how the room's designer <em>intended</em> the lights to work, or they can just flip the switches on a trial-and-error basis.</p>
+
+        <p>The minor frustrations of confusing light switches might not seem all that important in the big picture, but Norman includes the example as a way to illustrate that one of the most important&mdash;and most difficult&mdash;challenges that designers face is creating <em>mappings</em> that allow humans to effortlessly intuit the connection between some control or representation and some desired action.</p>
+
+        <p>Fundamentally, that's what interface design <em>is</em>. Good designers spend a huge chunk of their time thinking about how to reduce the amount of cognitive effort that goes into controlling some object or device.</p>
+
+        <p>A properly advanced spatial computing system could significantly reduce (although never eliminate) the major challenges of mapping between representations and reality for physical devices. When humans can control objects by <em>focusing their attention on the objects themselves</em>, many of the challenges of mapping and correspondence disappear.</p>
+
+        <p>An HMD that would allow a person to simply <em>gaze</em> at a <em>light</em> and change its state with a gesture is an undeniable improvement over a light switch that forces them to <em>imagine</em> how flipping some <em>switch</em> might affect the illumination of a room.</p>
+
+        <p>Like Norman, while I think that designing good lighting controls is a worthwhile endeavor in its own right, I believe that this example highlights a much broader principle. Humans interact with and control all sorts of physical devices in the real world. Too often, that interaction is mediated by an interface that requires imagining some correspondence between the physical <em>thing</em> and some <em>representation of that thing</em>.</p>
+
+        <p>Spatial computing could someday reduce the gap between controllable objects and controls, creating a revolution in how humans design and interact with virtually any object.</p>
+
+      </div>
+
+
+      <h2>EXTRACTING INFORMATION AND KNOWLEDGE FROM THE WORLD</h2>
+      <div class="bodySection">
+        <div class="hero">[Hero Video]</div>
+
+        <p>Why, in the age of the internet, do museums and galleries still exist?</p>
+
+        <p>It's now possible for humans to <em>see</em> pretty much every notable work of art or artifact instantly, from anywhere in the world. So why does anyone take the time and effort to actually travel to some <em>place</em> to see them?</p>
+
+        <p>Perhaps it's because our technology just isn't good enough yet. There are certain details that the limited resolutions of cameras can't capture. Or perhaps people like the curated experience that only museums and gallery spaces can provide. Maybe it's just the mystique of seeing something created by a notable person's hands.</p>
+
+        <p>I'd argue that it's at least in part because there's <em>real knowledge</em> that can be gained only from objects themselves. That in meaningful ways, there will never be a substitute for seeing  actual, real-world, made-of-atoms objects. The objects don't always <em>speak</em> for themselves, of course. Galleries and museums routinely have placards like the one on the left to help provide additional context. Tour guides and audio tours help draw attention to details that might otherwise be missed.</p>
+
+        <p>By <em>augmenting</em> real, physical objects with contextual information in-situ, spatial computing is a natural extension for museums and galleries. Consider the difference between reading a text description of some important detail&mdash;like the sinews carved from marble in Michelengelo's sculptures and a direct overlay.</p>
+
+        <p>The same concepts can also apply to more pedestrian objects or artifacts in the built world. Architectural tours can draw attention to aspects of building design and construction in place. Educational experiences can be crafted out of everyday objects, helping to explain what things are and how they came to be where they are.</p>
+      </div>
+
+      <h2>AUGMENTING MANIPULATION AND MOVEMENT</h2>
+      <div class="bodySection">
+        <div class="hero">[Hero Video]</div>
+
+        <p>It's hardly revelatory to point out that humans evolved bodies that move through the world, and that we're particularly well-adapted for using our hands to manipulate things. The word itself has its origins in the Latin <em>manus</em> for hand.</p>
+
+        <p>Much of what most humans do on Earth involves moving around and manipulating objects in space. And in the built environment, those objects and actions can get very complex, very quickly. In some sense, our ability to do this might be a major part of what separates humans from other animals; not just that we have bodies that are <em>capable</em> of manipulation, but that we have minds that are capable of learning, planning, imagining, and executing these actions.</p>
+
+        <p>Even the simplest actions require magic; something as simple opening a dishwasher requires recognizing the appliance itself, understanding its purpose, and imagining its past and future states. More complex actions, like performing an oil change on an unfamiliar car might be orders of magnitude more difficult.</p>
+
+        <p>Spatial computing can provide entirely new ways of helping humans conceive of, plan for, and executing actions that involve moving through space. It can naturally and intuitively guide humans through processes like an object's:</p>
+        <ul>
+          <li><strong>location</strong> (<em>the dishwasher door is here</em>)</li>
+          <li><strong>present state</strong> (<em>it is closed</em>)</li>
+          <li><strong>possible future state(s)</strong> (<em>it might be open</em>), and</li>
+          <li><strong>purpose</strong> (<em>opening the door allows accesss to the clean dishes</em>) of objects</li>
+        </ul>
+
+        <p>Of course, operating a dishwasher isn't a major challenge for most people. But the same general concepts can be applied to virtually any object or space. Complicated processes like machine maintenance could&mdash;at least in theory&mdash;be made far more accessible, far less prone to error, and much more efficient by reducing the cognitive load and prior knowledge necessary for their completion.</p>
+
+        <p>We don't just move other objects through space. We move our entire bodies, in processes that are just as complex as any manipulation. Navigating through the world requires a whole host of specialized neural circuitry and mental effort. To date, the best common tools that we've create to assist us in that process are interactive maps on mobile devices.</p>
+
+        <p>The familiar blue dots on these apps can help us understand where we are at a given moment. But making sense of that information requires yet another process of <em>mapping</em>. We need to learn how to make the conceptual leap from a two-dimensional, abstract <em>representation</em> of the world to the world itself.</p>
+
+        <p>And even that taxing process only gets us so far. In order to effectively <em>use</em> that information to navigate, we also need to be able to interpret <em>instructions</em> on how to continue to move into the future. These might be verbal , textual, or graphical. But in any case, there's still quite a bit of processing that we need to undertake to navigate to our destination.</p>
+
+        <p>By overlaying clear, physically-meaningful instructions (blue lines instead of blue dots), spatial computing could&mdash;again, at least <em>in theory</em>&mdash; make this process significantly easier. Instead of paying attention to future turns and forcing our minds to anticipate future outcomes, we could simply <em>see</em> where we need to go.</p>
+      </div>
+
+
+      <h2>CONCLUSION</h2>
+
+      <div class="bodySection">
+        <div class="hero">[Hero Video]</div>
+        <span style="color:red">[EXPLAIN WHY I DIDN'T TALK ABUOT AUGMENTED EXCEL, SPATIAL VIEWERS, ETC!]</span>
+
+        <p>It should be unsurprising that the various forms of spatial computing have received the hype, attention, and investment that they have. The possible use cases for the technology are truly revolutionary. Were they to live up to their potential, it doesn't seem like much of a stretch to imagine them having as large an impact on humans and society at large as personal computers and smartphones.</p>
+
+        <p>Yet that excitement needs to be tempered with an understanding of the very real challenges that these technologies actually entail. I've written more extensively on this subject here, but the short version is that most of what I've written about here isn't really feasible in a sophisticated way just yet.</p>
+
+        <p>Current HMDs are great for exploration and prototyping, but their size, weight, battery life, optical shortcomings, and processing requirements mean that truly useful applications may be largely a dream for the future (at least as of early 2020).</p>
+
+        <p>That's not to say that current devices and technology are <em>useless</em>, of course. We're rapidly approaching a world in which even entry-level mobile devices will be capable of running interesting, worthwhile museum experiences. Existing HMDs can already provide a great deal of value in niche applications for effecting physical changes and augmenting manipulation.</p>
+
+        <p>We're just not nearly at the point where it would be common for most people to wear fully-immersive smart glasses throughout the day. And for the time being, it's important to recognize how and when spatial computing technology can actually be useful for realy humans.</p>
+      </div>
 
   </body>
 </html>
