Hide skills from touch

--- a/index.html
+++ b/index.html
@@ -57,17 +57,19 @@
 
     </div>
 
-    <div style="width:100vw; min-height:100vh">
-      <div style="background-color:black; padding-left:1em; padding-right:1em; font-size:2.5em; border-left:0.25em solid #984BA3; font-weight:500; color:white; font-family:Oswald; display:inline-block">TOOLS OF THE TRADE</div>
-      <div style="margin-left:5vw; font-size:1.25em; margin-top:0.5em; margin-bottom:0.5em">I've had the opportunity to use many different technologies and develop skills. Here are some of them.</div>
-      <div id="skillBoxContainer"></div>
-      <div id="skillBoxSkillSvgs"></div>
-    </div>
+    <div id="onlyDesktop">
+      <div style="width:100vw; min-height:100vh">
+        <div style="background-color:black; padding-left:1em; padding-right:1em; font-size:2.5em; border-left:0.25em solid #984BA3; font-weight:500; color:white; font-family:Oswald; display:inline-block">TOOLS OF THE TRADE</div>
+        <div style="margin-left:5vw; font-size:1.25em; margin-top:0.5em; margin-bottom:0.5em">I've had the opportunity to use many different technologies and develop skills. Here are some of them.</div>
+        <div id="skillBoxContainer"></div>
+        <div id="skillBoxSkillSvgs"></div>
+      </div>
 
-    <div style="width:100vw;min-height:100vh">
-      <div class="triggerPoint" data-trigger-point="resume"></div>
-      <div id="timeline"></div>
-      <div style="padding-left:5vw"><em>* Any views and opinions expressed on this site are my own and not those of my current or former employers.</em></div>
+      <div style="width:100vw;min-height:100vh">
+        <div class="triggerPoint" data-trigger-point="resume"></div>
+        <div id="timeline"></div>
+        <div style="padding-left:5vw"><em>* Any views and opinions expressed on this site are my own and not those of my current or former employers.</em></div>
+      </div>
     </div>
 
 
